FINISH LOGIC GAME

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,6 +14,12 @@
   "unete_text":"Get access to maintain your own custom personal lists, track what you've seen and search and filter for what to watch next—regardless if it's in theatres, on TV or available on popular streaming services like Netflix, Amazon Prime Video, Disney Plus, fuboTV y Apple TV Plus.",
   "unete_title":"Join up today.",
   "welcome_text":"Millions of movies, TV shows, and people to discover. Explore now.",
-  "welcome_title":"Welcome."
-  
+  "welcome_title":"Welcome.",
+  "options":"Options",
+  "sinopsis":"Sinopsis",
+  "restart":"Restart",
+  "solve":"Solve",
+  "score":"User score",
+  "general-view":"General view"
+
   }
