--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -20,5 +20,8 @@
     "restart":"Reiniciar",
     "solve":"Resolver",
     "score":"Puntuación de usuario",
-    "general-view":"Vista general"
+    "general-view":"Vista general",
+    "principal-cast":"Reparto Principal",
+    "recommendations":"Recomendaciones",
+    "recommendations-not":"No hay recomendaciones para esta película"
   }
