--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -23,5 +23,7 @@
   "general-view":"General view",
   "principal-cast":"Principal Cast",
   "recommendations":"Recommendations",
-  "recommendations-not":"There are no recommendations for this film"
+  "recommendations-not":"There are no recommendations for this film",
+  "correct":"Well done, you got it right!",
+  "incorrect":"Ooh, try again!"
   }
